v2.16/_sources/API_ref/VPL_structs_encode.rst
.. SPDX-FileCopyrightText: 2019-2020 Intel Corporation
..
.. SPDX-License-Identifier: CC-BY-4.0
..
  Intel(r) Video Processing Library (Intel(r) VPL)

.. _struct_encode:

=====================
Encode Structures
=====================

.. _struct_encode_begin:

Structures used by Encode only.

.. _struct_encode_end:

---
API
---

.. contents::
   :local:
   :depth: 1


mfxBRCFrameCtrl
---------------

.. doxygenstruct:: mfxBRCFrameCtrl
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxBRCFrameParam
----------------

.. doxygenstruct:: mfxBRCFrameParam
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

Frame spatial complexity is calculated according to the following formula:

.. image:: ../images/frame_cmplx.png
   :alt: Frame spatial complexity

mfxBRCFrameStatus
-----------------

.. doxygenstruct:: mfxBRCFrameStatus
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxEncodeCtrl
-------------

.. doxygenstruct:: mfxEncodeCtrl
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxEncodedUnitInfo
------------------

.. doxygenstruct:: mfxEncodedUnitInfo
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxEncodeStat
-------------

.. doxygenstruct:: mfxEncodeStat
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtAVCEncodedFrameInfo
-------------------------

.. doxygenstruct:: mfxExtAVCEncodedFrameInfo
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:
   :undoc-members:

mfxExtAVCRefListCtrl
--------------------

.. doxygenstruct:: mfxExtAVCRefListCtrl
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:
   :undoc-members:

mfxExtAVCRefLists
-----------------

.. doxygenstruct:: mfxExtAVCRefLists
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtAVCRoundingOffset
-----------------------

.. doxygenstruct:: mfxExtAVCRoundingOffset
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtAvcTemporalLayers
-----------------------

.. doxygenstruct:: mfxExtAvcTemporalLayers
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtBRC
---------

.. doxygenstruct:: mfxExtBRC
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtChromaLocInfo
-------------------

.. doxygenstruct:: mfxExtChromaLocInfo
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:
   :undoc-members:

mfxExtCodingOption
------------------

.. doxygenstruct:: mfxExtCodingOption
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtCodingOption2
-------------------

.. doxygenstruct:: mfxExtCodingOption2
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:
   :undoc-members:

mfxExtCodingOption3
-------------------

.. doxygenstruct:: mfxExtCodingOption3
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtCodingOptionSPSPPS
------------------------

.. doxygenstruct:: mfxExtCodingOptionSPSPPS
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:
   :undoc-members:

mfxExtCodingOptionVPS
---------------------

.. doxygenstruct:: mfxExtCodingOptionVPS
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtDirtyRect
---------------

.. doxygenstruct:: mfxExtDirtyRect
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtEncodedUnitsInfo
----------------------

.. doxygenstruct:: mfxExtEncodedUnitsInfo
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtEncoderCapability
-----------------------

.. doxygenstruct:: mfxExtEncoderCapability
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtEncoderIPCMArea
---------------------

.. doxygenstruct:: mfxExtEncoderIPCMArea
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtEncoderResetOption
------------------------

.. doxygenstruct:: mfxExtEncoderResetOption
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtEncoderROI
----------------

.. doxygenstruct:: mfxExtEncoderROI
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtHEVCRegion
----------------

.. doxygenstruct:: mfxExtHEVCRegion
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtHEVCTiles
---------------

.. doxygenstruct:: mfxExtHEVCTiles
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtInsertHeaders
-------------------

.. doxygenstruct:: mfxExtInsertHeaders
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:
   :undoc-members:

mfxExtMBDisableSkipMap
----------------------

.. doxygenstruct:: mfxExtMBDisableSkipMap
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtMBForceIntra
------------------

.. doxygenstruct:: mfxExtMBForceIntra
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtMBQP
----------

.. doxygenstruct:: mfxExtMBQP
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtMoveRect
--------------

.. doxygenstruct:: mfxExtMoveRect
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtMVOverPicBoundaries
-------------------------

.. doxygenstruct:: mfxExtMVOverPicBoundaries
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtPartialBitstreamParam
---------------------------

.. doxygenstruct:: mfxExtPartialBitstreamParam
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtPictureTimingSEI
----------------------

.. doxygenstruct:: mfxExtPictureTimingSEI
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:
   :undoc-members:

mfxExtPredWeightTable
---------------------

.. doxygenstruct:: mfxExtPredWeightTable
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtVP8CodingOption
---------------------

.. doxygenstruct:: mfxExtVP8CodingOption
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtVP9Segmentation
---------------------

.. doxygenstruct:: mfxExtVP9Segmentation
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtVP9TemporalLayers
-----------------------

.. doxygenstruct:: mfxExtVP9TemporalLayers
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxQPandMode
------------

.. doxygenstruct:: mfxQPandMode
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxVP9TemporalLayer
-------------------

.. doxygenstruct:: mfxVP9TemporalLayer
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:


mfxTemporalLayer
----------------

.. doxygenstruct:: mfxTemporalLayer
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:


mfxExtTemporalLayers
--------------------

.. doxygenstruct:: mfxExtTemporalLayers
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:


mfxExtAV1BitstreamParam
-----------------------

.. doxygenstruct:: mfxExtAV1BitstreamParam
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtAV1ResolutionParam
------------------------

.. doxygenstruct:: mfxExtAV1ResolutionParam
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtAV1TileParam
------------------

.. doxygenstruct:: mfxExtAV1TileParam
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtAV1Segmentation
---------------------

.. doxygenstruct:: mfxExtAV1Segmentation
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxCTUHeader
------------

.. doxygenstruct:: mfxCTUHeader
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxCUInfo
---------

.. doxygenstruct:: mfxCUInfo
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxCTUInfo
----------

.. doxygenstruct:: mfxCTUInfo
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxMBInfo
---------

.. doxygenstruct:: mfxMBInfo
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxEncodeBlkStats
-----------------

.. doxygenstruct:: mfxEncodeBlkStats
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxEncodeHighLevelStats
-----------------------

.. doxygenstruct:: mfxEncodeHighLevelStats
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxEncodeFrameStats
-------------------

.. doxygentypedef:: mfxEncodeFrameStats
   :project: DEF_BREATHE_PROJECT

mfxEncodeSliceStats
-------------------

.. doxygenstruct:: mfxEncodeSliceStats
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxEncodeTileStats
------------------

.. doxygentypedef:: mfxEncodeTileStats
   :project: DEF_BREATHE_PROJECT

mfxEncodeStatsContainer
-----------------------

.. doxygenstruct:: mfxEncodeStatsContainer
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtEncodeStatsOutput
-----------------------

.. doxygenstruct:: mfxExtEncodeStatsOutput
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtHEVCRefListCtrl
---------------------

.. doxygentypedef:: mfxExtHEVCRefListCtrl
   :project: DEF_BREATHE_PROJECT

mfxExtHEVCRefLists
------------------

.. doxygentypedef:: mfxExtHEVCRefLists
   :project: DEF_BREATHE_PROJECT

mfxExtHEVCTemporalLayers
------------------------

.. doxygentypedef:: mfxExtHEVCTemporalLayers
   :project: DEF_BREATHE_PROJECT

mfxExtQualityInfoMode
---------------------

.. doxygenstruct:: mfxExtQualityInfoMode
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtQualityInfoOutput
-----------------------

.. doxygenstruct:: mfxExtQualityInfoOutput
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtAV1ScreenContentTools
---------------------------

.. doxygenstruct:: mfxExtAV1ScreenContentTools
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtAlphaChannelEncCtrl
-------------------------

.. doxygenstruct:: mfxExtAlphaChannelEncCtrl
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtAlphaChannelSurface
-------------------------

.. doxygenstruct:: mfxExtAlphaChannelSurface
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:

mfxExtAIEncCtrl
-------------------------

.. doxygenstruct:: mfxExtAIEncCtrl
   :project: DEF_BREATHE_PROJECT
   :members:
   :protected-members:
